// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should match snapshots for each variant 1`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#000",
        "lineHeight": 22,
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 2`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#fff",
        "fontWeight": "bold",
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 3`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#000",
        "fontWeight": "bold",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;
